# shellchat

./: .gitignore  Cargo.toml  README.md  config.yaml.example
.github/workflows/: release.yml
scripts/: build_install.ps1  build_install.sh  install.ps1  install.sh
src/: app.rs  cli.rs  config.rs  display.rs  error.rs  executor.rs  input.rs  lib.rs  main.rs  system.rs
src/cli/: parser.rs
src/commands/: dispatcher.rs  handler.rs  mod.rs  registry.rs
src/config/: mod.rs
src/core/: error.rs  executor.rs  mod.rs
src/mcp/: mod.rs  tool.rs
src/providers/: anthropic.rs  base_client.rs  deepseek.rs  factory.rs  mod.rs  openai.rs  openai_compatible.rs  openai_style.rs  openrouter.rs
src/providers/gemini/: client.rs  mod.rs  types.rs
src/utils/: text.rs
