[package]
name = "schat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
async-trait = "0.1"
openai-api-rs = "6.0.6"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
console = "0.15.11"
