[package]
name = "schat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
os_info = "3.12.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1.0"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
console = "0.15.11"
is-terminal = "0.4.16"
futures = "0.3"
termimad = "0.33.0"
thiserror = "2.0"
